# p4

./: .gitignore  .gitmodules  Dockerfile  README.md  colcon_defaults.yaml  crazytest.py  emner til p.md  install.md  jazzy.Dockerfile  magnus_start_station_tmux.sh  p-control.py  start_station_tmux.sh
.cargo/: config.toml
app/: .gitignore
app/ootcontroller/: .built-in.o.cmd  Makefile  app-config  compile_commands.json
app/test/: .built-in.o.cmd  Makefile  app-config
bag1/: bag1_0.mcap  metadata.yaml
bag2/: bag2_0.mcap  metadata.yaml
bag3/: bag3_0.mcap  metadata.yaml
bags/bag1/: bag1_0.mcap  metadata.yaml
bags/bag2/: bag2_0.mcap  metadata.yaml
cpp_pac/: CMakeLists.txt  package.xml
crazyflie-firmware/: .gitignore  Kconfig  Makefile
launch/: all_segments.launch.py  all_vicon_gui.py
plot_scripts/: baggui.py  bagtocsv.py  pyplotbag.py
src/gui/: Cargo.toml  package.xml
src/gui/react/dashboard/: package.json  rsbuild.config.mjs
src/gui/react/dashboard/src/: App.css  App.jsx
src/gui/react/dashboard/src/components/: datainput.js  graphs.js  main.js  programcontainer.js  programitem.js
src/gui/src/: web.rs
src/gui/webdata/: index.html  js.js  style.css
src/gui/webdata/static/css/: index.bce07ba2.css  index.d9305792.css
src/gui/webdata/static/js/: 352.87ecb0c6.js  352.87ecb0c6.js.LICENSE.txt  index.93820818.js  index.95d115ee.js  index.c927a068.js  lib-react.2934d226.js
tests/: brescianini_system.py  crazy.py  crazytest.py  p-control.py  thrust_requirement.py
yawbag/: metadata.yaml  yawbag_0.mcap
yx2bag/: yx2bag_0.mcap
(+96 files in other folders)
