[package]
name = "cf_rust_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "web"
path = "src/web.rs"


[dependencies]
rocket = { version = "0.5.1"}
serde = "1.0.195"
rust-embed = "8.3.0"
rocket_ws = "0.1.1"

[dependencies.rclrs]
version = "*"

[dependencies.rosidl_runtime_rs]
version = "*"

[dependencies.std_msgs]
version = "*"

[dependencies.geometry_msgs]
version = "*"
